--- a/style.css
+++ b/style.css
@@ -101,7 +101,8 @@ body{
 }
 
 .home {
-  background-image: url(img/101.jpg);
+   background: linear-gradient(to bottom, #f0f0f0, #ffffff);
+  color: #000000;
   background-size: cover;
   min-height: 100vh;
   margin-top: -4.5rem;
@@ -327,7 +328,7 @@ footer a:hover {
 }
 /* media query */
 /* laptop */
-@media (msx-width:992px){
+@media (mx-width:992px){
 html{
     font-size: 75%;
 }
@@ -337,7 +338,7 @@ padding: 70px;
 }
 
 /* tablet*/
-@media (msx-width:768px){
+@media (mx-width:768px){
 html{
     font-size: 65%;
 }
@@ -354,7 +355,7 @@ text-align: center;
     
 }
 /*mobile phone*/
-@media (msx-width:576px){
+@media (mx-width:576px){
 html{
     font-size: 60%;
 }
