--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@
     --shadow: 0 2px rgb(0 0 0 / 0.5);
 }
 
+html {
+      scroll-behavior: smooth;
+    }
 body{
    font-size: 1.2rem;
    font-family: "Work Sans", sans-serif;
@@ -12,9 +15,10 @@ body{
 
 
 .hero {
-  position: relative;
-  overflow: hidden;
-  
+ height: 100vh;
+ background-size: cover;
+ background-position: center;
+ position: relative;
 }
 
 .hero::before {
@@ -24,13 +28,15 @@ body{
   left: 0;
   height: 100%;
   width: 100%;
-
-  background-image: url('img/tangan.jpeg');
+  background-image: 
+    linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)), 
+    url('img/tangan.jpeg');
   background-size: cover;
   background-position: center 40%; /* ini menurunkan posisi gambar */
   background-repeat: no-repeat;
   z-index: -1;
 }
+
 
 .hero h1, .hero h4, .hero p {
     text-shadow: var(--shadow);
@@ -45,16 +51,17 @@ body{
 
 .hero h1 {
     font-family: 'sacramento', cursive;
-    font-size: 2.5rem;
+    font-size: 2rem;
+    font: bold;
 }
 
 .hero h4 {
-    font-size: 1rem;
+    font-size: 0.8rem;
     padding: 2rem;
 }
 
 .hero p {
-    font-size: 1rem;
+    font-size: 0.8rem;
      padding: 2rem;
 }
 
@@ -72,6 +79,10 @@ body{
 .mynavbar {
   background-color: rgb(255, 255, 255, 0.2) !important;
   backdrop-filter: blur(4px)!important;
+}
+
+.navbar-brand {
+  font-size: 1rem;
 }
 
 
@@ -104,8 +115,8 @@ body{
   color: #000000;
   background-size: cover;
   min-height: 100vh;
-  margin-top: -4.5rem;
-  padding-top: 8rem; /* Turunkan konten, bukan gambar */
+  margin-top: -3.5rem;
+  padding-top: 6rem; /* Turunkan konten, bukan gambar */
   padding-bottom: 5rem;
 }
 
@@ -114,7 +125,7 @@ body{
  {
   color: rgb(14, 15, 15);
   font-family: 'Sacramento', cursive;
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: bold;
 }
 
@@ -126,7 +137,7 @@ body{
 
 .home p,
 .gifts p {
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #2e2e2e;
 }
 
@@ -157,7 +168,7 @@ body{
  {
   color: rgb(252, 254, 254);
   font-family: 'Sacramento', cursive;
-  font-size: 5rem;
+  font-size: 2.5rem;
   font-weight: bold;
 }
 
@@ -228,7 +239,7 @@ body{
 }
 
 .rsvp h2{
-  font-size:3rem ;
+  font-size:2rem ;
   color: white;
   font-family:"Work Sans", sans-serif;
 }
@@ -243,20 +254,20 @@ body{
  {
   color: rgb(0, 217, 251);
   font-family: 'Sacramento', cursive;
-  font-size: 5rem;
+  font-size: 3rem;
   font-weight: bold;
-}
-
+ }
 .mandiri-card {
   position: relative;
-  background-image: 
-    url('img/background.jpeg');
+  background-image: url('img/background.jpeg');
   background-size: cover;
   background-position: center;
-  border-radius: 20px;
   overflow: hidden;
   color: white;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  width: 90%;              
+  margin: 0 auto;
+  border-radius: 20px;
 }
 
 .mandiri-card:hover {
@@ -277,8 +288,9 @@ body{
       filter: drop-shadow(0 0 2px rgba(0,0,0,0.5));
     }
 
-  .mandiri-card p {
-  font-size: 1.1rem;
+  .mandiri-card p,
+   .mandiri-card h5 {
+  font-size: 0.8rem;
   color: #faf9f9;
 }
 
@@ -342,7 +354,7 @@ html{
     font-size: 65%;
 }
 .simply-countdown > .simply-section{
-padding: 60px;
+padding: 50px;
 margin: 5px;
 }
 
@@ -354,14 +366,11 @@ text-align: center;
     
 }
 /*mobile phone*/
-@media (mx-width:576px){
-html{
-    font-size: 60%;
-}
-.simply-countdown > .simply-section{
-padding: 45px;
-margin: 2px;
-}
+@media (max-width: 576px) {
+  .simply-countdown > .simply-section {
+    padding: 10px;
+    font-size: 0.8rem;
+  }
 }
 
 
