--- a/style.css
+++ b/style.css
@@ -76,62 +76,16 @@ body{
     color: white;
 }
 
-.mynavbar {
-  background-color: rgb(255, 255, 255, 0.2) !important;
-  backdrop-filter: blur(4px)!important;
-}
-
-.navbar-brand {
-  font-size: 1rem;
-}
-
-
-:root {
-  scroll-padding-top: 3px ;
-  --pink: #e91e63; /* kalau belum didefinisikan */
-}
-
-.mynavbar .offcanvas {
-  background-color: rgba(0, 0, 0, 0.6) !important; /* Hitam semi-transparan */
-  backdrop-filter: blur(10px); /* Efek blur */
-  -webkit-backdrop-filter: blur(10px); /* Safari */
-  color: white !important;
-  z-index: 1055; /* Pastikan muncul di atas */
-}
-
-.mynavbar .offcanvas-title,
-.mynavbar .nav-link {
-  color: #ffffff !important; /* Teks putih */
-  font-size: 1.2rem;
-}
-
-.mynavbar .btn-close {
-  filter: invert(1); /* Biar tombol close kelihatan di background gelap */
-}
-
-
-.mynavbar .navbar-brand,
-.mynavbar .offcanvas-title {
-  font-family: 'Sacramento', cursive;
-  font-size: 2rem;
-  font-weight: bold;
-}
-
-.mynavbar .nav-link {
-  color: #ffffff !important;
-}
-
-
 .sticky-top {
   overflow: hidden;
 }
+
 
 .home {
    background: linear-gradient(to bottom, #f0f0f0, #ffffff);
   color: #000000;
   background-size: cover;
   min-height: 100vh;
-  margin-top: -3.5rem;
   padding-top: 6rem; /* Turunkan konten, bukan gambar */
   padding-bottom: 5rem;
 }
@@ -176,8 +130,8 @@ body{
 .info{
     background-color: #444;
     color: white;
-    padding-top: 8rem;
-    padding-bottom: 8rem;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
 }
 
 .info h2
@@ -193,14 +147,14 @@ body{
 }
 
 .info .description {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 300;
 }
 
 .info .card {
   background-color: rgba( 255, 255, 255, 0.2) !important;
   color: white !important;
-  border: 1px solid #999;
+  border: 2px solid #999;
 }
 
 .info .card-header {
@@ -229,12 +183,9 @@ body{
 .gallery {
   padding-top: 4rem;
   padding-bottom: 5rem;
-}
-
-.gallery {
   background-color: #f5f5f5;
-
 }
+
   .gallery img {
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
@@ -281,9 +232,9 @@ body{
   overflow: hidden;
   color: white;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  width: 100%;         /* Buat selebar kontainer induknya */
-  max-width: 1200px;   /* Batas maksimal lebarnya */
-  margin: 0 auto;      /* Tengah secara horizontal */
+  width: 100%;         
+  max-width: 1200px;  
+  margin: 0 auto;      
   border-radius: 20px;
   padding: 1.5rem;
 }
@@ -316,7 +267,6 @@ body{
 footer {
   padding: 0.5rem;
   background-color: #3d6c78;
-  margin-top: 3rem;
   color:white;
 }
 
